@@ -8,6 +8,8 @@
 	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.
 - AI:
 	- Smoothly vary the roll target during gain alt behaviour from the surface normal to vertical to avoid clipping wings into terrain when taking off on uneven terrain.
+	- Don't store/restore fields that are reference types.
+	- Make sure Time Override gets disabled when the AI gets destroyed if auto-tuning was enabled (should prevent it from being active unintentionally during competitions).
 - Weapons:
 	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket part-menu infocards.
 	- Missiles:
